# linxi

./: .dockerignore  .gitignore  Dockerfile  Lucky_DDNS_诊断报告.md  README.md  UI_OPTIMIZATION_LOG.md  alembic.ini  argent_vellum_philosophy.md  aurum_noir_philosophy.md  css-audit-report.md  docker-compose.yml  image_edit_test_report_20260717.md  integration_smoke_report.md  luminous_void_philosophy.md  pyproject.toml  requirements.txt  silk_aether_philosophy.md  strata_lucida_philosophy.md  ui-optimization-log.md  灵犀App_UI检查报告.md
.github/workflows/: build-android-apk.yml  build-backend-image.yml  build-native-clients.yml  build-tauri.yml  debug-upload.yml
.trae/documents/: designer_app_plan.md
alembic/: env.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dockerignore  docker-compose.yml  entrypoint.sh  requirements.txt
docker/: entrypoint.sh
docs/: NATIVE_REWRITE_PLAN.md  ui-optimization-20260717.md  ui-optimization-log.md
frontend-capacitor/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
frontend-tauri/: README.md  package.json
frontend-tauri/src-tauri/: Cargo.toml  tauri.conf.json
frontend-tauri/src-tauri/src/: main.rs
lingxi-clients/: .gitignore  CODE_REVIEW_REPORT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  shared-code-review.md
lingxi-clients/androidApp/: build.gradle.kts  proguard-rules.pro
screenshots/: verify_summary.json
scripts/: build-all.bat  dev.bat
src/: config.py  server.py
src-tauri/: tauri.conf.json
unraid/: lingxi-backend.xml  lingxi-postgres.xml
(+187 files in other folders)
