[project]
name = "designer_app"
version = "1.0.0"
description = "AI-powered design tool for interior designers"
dependencies = [
    "flet>=0.28.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[tool.flet.app]
path = "src"
module = "main"

[tool.flet]
org = "com.designer"
product = "设计师助手"
company = "Designer Studio"
