[package]
name = "lingxi"
version = "1.0.0"
description = "灵犀 - AI 室内设计助手（Tauri 桌面端）"
authors = ["mvpdark"]
edition = "2021"
rust-version = "1.77.2"

# 构建脚本依赖（tauri 必需）
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 发布版体积优化
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
